# ZhiLight

./: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  requirements.txt  setup.py  version.py
3rd/bmengine/: CMakeLists.txt
3rd/bmengine/bmengine/: CMakeLists.txt
3rd/bmengine/bmengine/c10d/: c10d.cpp
3rd/bmengine/bmengine/cmake/: FindNCCL.cmake
3rd/bmengine/bmengine/core/: allocator.cpp  context.cpp  engine.cpp  exception.cpp  guard.cpp  layer.cpp  logger.cpp  memory.cpp  storage.cpp  stream.cpp  tensor.cpp  tensor_impl.cpp  tensor_print.cpp  thread_pool.cpp
3rd/bmengine/bmengine/functions/: arthmetic.cu  cat.cu  element.cu  gemm.cpp  index_select.cu  init.cu  softmax.cu  tensor_ops.cu  topk.cu  transpose.cu  typecast.cu
3rd/bmengine/bmengine/include/bmengine/c10d/: c10d.h
3rd/bmengine/bmengine/include/bmengine/core/: context.h  core.h  dtype.h  engine.h  exception.h  guard.h  layer.h  logger.h  storage.h  stream.h  tensor.h  thread_pool.h  utils.h
3rd/bmengine/bmengine/include/bmengine/functions/: all.h  arthmetic.h  cat.h  element.h  gemm.h  index_select.h  init.h  list.h  reduce.cuh  softmax.h  tensor_ops.h  topk.h  transpose.h  typecast.h  utils.cuh
3rd/bmengine/bmengine/include/bmengine/logger/: file.h  kernel_time_trace.hpp  logger.h  null.h  std_log_op.hpp  stdio.h  syslog.h  time.h  vector_printer.h
3rd/bmengine/bmengine/include/bmengine/storage/: local.h
3rd/bmengine/bmengine/include/private/: allocator.h  context.h  engine.h  guard.h  logger.h  memory.h  rwlock.h  stream.h  tensor_impl.h  tensor_ops.h
3rd/bmengine/tests/: CMakeLists.txt  test_allocator.cpp  test_bitonic.cpp  test_element.cpp  test_gemm.cpp  test_index_select.cpp  test_nccl.cpp  test_print_tensor.cpp  test_softmax.cpp  test_template.cpp  test_thread_pool.cpp
3rd/flash_decoding/: README.md  flash_api.h
cmake/: bmengine.cmake
docker/: Dockerfile
docs/: benchmarks.md
docs/benchmarks/: README.md  benchmarks.md
examples/: offline_inference.py  online_batch_completion.py  online_stream_chat.py
scripts/: run_tests.sh
src/generator/: batch_generator.cpp  batch_generator.h  beam_buffer_manager.hpp  beam_result_manager.hpp  beam_util.cu  beam_util.h  generator.h  prefix_cache.hpp  random_util.cu  random_util.h
src/kvcache/: block_allocator.cpp  block_allocator.h  kvcache.cpp  kvcache.h  paged_kvcache.cu  paged_kvcache.h  ragged_buffer_kernel.cu  ragged_buffer_kernel.h  transformer_buffer.cu  transformer_buffer.h
src/model/: allocate_util.hpp  buffer_context.cpp  buffer_context.h  dyn_batch_context.h  host_all_reducer.cpp  llama.cpp  llama.h  model.h  model_config.hpp  model_context.cpp  model_context.h  model_util.cu  model_util.h  rag_buffer_context.h
src/nn/: nn.h
src/nn/attention/: attention.cpp  attention.h  attention_base.hpp  attention_kernel.cu  attention_kernel.h  attention_softmax_kernel.cu  flash_decoding.cpp  flash_decoding.h  multi_head_latent_attention.cpp  quant_attention.cuh
src/nn/block/: block.cpp  block.h  block_kernel.cu  block_kernel.h
src/nn/embedding/: embedding.cu  embedding.h
src/nn/feedforward/: feedforward.cpp  feedforward.h  ff_kernel.cu
src/nn/functions/: activation.cuh  cross_entropy.cu  element.cu  functions.h  softmax.cu
src/nn/layernorm/: layernorm.cu  layernorm.h
src/nn/linear/: activation_kernel.cu  activation_kernel.h  cuda_helper.cpp  cuda_helper.h  gemm_grouped.cpp  gemm_grouped.h  linear.cpp  linear.h
src/nn/position/: rope_preparer.cu  rope_preparer.h  rotary_embedding.cu  rotary_embedding.h  rotary_embedding_fuse.cu  rotary_embedding_fuse_cache.cu
src/nn/quant/awq/: awq.h  dequantize.cuh  gemm_kernels.cu
src/nn/quant/fp8/: fp8.h  fp8_gemm.cu  fp8_util.cu
src/nn/quant/gptq/: compat.cuh  gptq.h  groupwise_int8.cu  matrix_view.cuh  q_gemm.cu  q_gemm_k_major.cu  qdq_4.cuh  qdq_util.cuh  utils.cu
src/nn/quant/int8/: quant_kernel.cu  quant_kernel.h  quant_reduce_kernel.cu
src/nn/quant/marlin/: awq_marlin_repack.cu  gptq_marlin.cu  gptq_marlin_repack.cu  marlin.cuh  marlin.h  scalar_type.hpp
src/nn/tests/: CMakeLists.txt  test_attention_rag_buffer.cpp  test_quant.cpp
src/py_export/: bind.h  py_batch_generator.cpp  py_llama.cpp  py_model_base.cpp  py_model_base.h  py_model_config.cpp  py_utils.cpp  py_utils.h
src/utils/: array_guard.h  env.h  exception.h  lru_cache.hpp  matrix.hpp  print.h  ts_queue.hpp
tests/: benchmark_llama2.py  benchmark_llama2a.py  sentence.txt  stream_web_demo.py  test_arthmetic.py  test_attention.py  test_attn_softmax.py  test_concat_tensor.py  test_embedding.py  test_feedforward.py  test_fetch_tokens.py  test_index_along_dim.py  test_lazy_loader.py  test_linear.py  test_llama.py  test_llama2.py  test_log_prob.py  test_mistral.py  test_rotary_embedding.py  test_softmax.py
tests/py_export_internal/: CMakeLists.txt  bind_internal.cpp  bind_internal.h  functions.cpp  internal_utils.cpp  internal_utils.h  layer_attention.cpp  layer_base.hpp  layer_embedding.cpp  layer_feedforward.cpp  layer_linear.cpp
tools/: gen_smooth_quant_scales.py
zhilight/: __init__.py  config.py  convert.py  dynamic_batch.py  lazy_unpickling.py  llama.py  load_tensor_util.py  loader.py  quant.py  version.py
zhilight/config/: adapter.py  cohere_adapter.py  dev_config.py  qwen2_adapter.py
zhilight/server/openai/basic/: config.py  logger.py  outputs.py  sampling_params.py  sequence.py  utils.py
zhilight/server/openai/engine/: arg_utils.py  async_llm_engine.py  llm_engine.py  metrics.py
zhilight/server/openai/entrypoints/: api_server.py  cli_args.py  middleware.py  preparse_cli_args.py  protocol.py  serving_chat.py  serving_completion.py  serving_engine.py
zhilight/server/openai/lora/: request.py
